--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<title>GuileGames</title>
 		<link rel="icon" type="image/png" href="/assets/guilegames.png">
 		<link rel="stylesheet" type="text/css" href="css/game.css">
+		<link rel="stylesheet" type="text/css" href="css/welcome.css">
 		<link rel="stylesheet" type="text/css" href="css/menu.css">
 	</head>
 	<body>
@@ -12,6 +13,7 @@
 		<section id="GuileGames"></section>
 
 		<script src="js/screen.js"></script>
+		<script src="js/model.js"></script>
 		<script src="js/cns.js"></script>
 
 
